# trustfall-pandascore-adapter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE
.github/workflows/: rust.yaml
examples/: main.rs  query.graphql
src/: field_value.rs  lib.rs  pagination.rs
src/adapter/: adapter_impl.rs  edges.rs  entrypoints.rs  error.rs  mod.rs  properties.rs  schema.graphql  tests.rs  vertex.rs
