[package]
name = "trustfall-pandascore-adapter"
description = "A trustfall adapter for the Pandascore API"
version = "0.1.0"
authors = ["Anshul Gupta <ansg191@anshulg.com>"]
repository = "https://github.com/ansg191/trustfall-pandascore-adapter"
documentation = "https://docs.rs/trustfall-pandascore-adapter"
license = "MIT"
edition = "2021"

[features]
default = ["log"]
log = ["dep:log"]

[dependencies]
compact_str = "0.8.0"
log = { version = "0.4", optional = true }
pandascore = "0.3.2"
thiserror = "1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "rt"] }
trustfall = "0.7.1"

[dev-dependencies]
anyhow = "1"
env_logger = "0.11.5"
reqwest = "0.12"
